=== 1.4.2

* Detect language change from context menu on compose window.

=== 1.4.1

* Fix preferences window error shown in error console

=== 1.4.0

* Restartless 

* Added support for Conversations plugin #5

* Added promotions to suggest user to share the plugin with it's mates or write a review

* Collect event when user finally sends mail, to see if the plugin is being useful

=== 1.3.0

* Added heuristics to guess language based on the domain of the recipients.

* Added GoogleAnalytics support to track the activity of the plugin. All anonymous data.

* Improoved the responsive of the plugin by looking for languages for recipients 
only when the focus is changed on the compose window. It can be disabled by 
preferences.

* Fix when message hides too fast.

* Implement language detection when the known recipient is set on the CC's group.

* When doing heuristics with a group of recipients, use the more frequent lang.