@@ -5,8 +5,9 @@ deducedLang.guess=Dedu\u00eft %S
 settingListenersError=Error intern (Inicializaci\u00f3 d'observadors)
 errorSettingSpellLanguage=Error: No es pot posar el diccionari %S. Potser s'ha desinstal\u00b7lat?
 DiscardedUpdateTooMuchRecipients=Descartat guardar l'idioma. Masses destinataris. (M\u00e0xims destinataris s\u00f3n %S)
-WeAreCollectingData=AutomaticDictionarySwitcher recull dades an\u00f2nimes del \u00fas que en fas per millorar futures versions. Pots deshabilitar-ho editant les preferencies de l'extensi\u00f3.
+WeAreCollectingData=AutomaticDictionarySwitcher recull dades an\u00f2nimes del \u00fas que en fas per millorar futures versions.
 IMOKWithIt=Ho trobo b\u00e9!
+DontDoIt=No ho facis
 MoreInfo=M\u00e9s informaci\u00f3
 PromotionsNotNowButton=Ara no
 PromotionsNotAnyMoreButton=No mostrar m\u00e9s aix\u00f2
