@@ -5,8 +5,9 @@ deducedLang.guess=Guessed %S
 settingListenersError=Internal error (Init. listeners)
 errorSettingSpellLanguage=Error: Could not set language to %S. Maybe its not installed any more?
 DiscardedUpdateTooMuchRecipients=Discarded to save language preferences as there are too much recipients. (Max recipients are %S)
-WeAreCollectingData=AutomaticDictionarySwitcher addon is collecting anonymous data from your usage to improve next versions. You can disable it in the addon preferences window.
+WeAreCollectingData=AutomaticDictionarySwitcher addon is collecting anonymous data from your usage to improve next versions.
 IMOKWithIt=I'm OK with it!
+DontDoIt=Don't do it
 MoreInfo=More information
 PromotionsNotNowButton=Not now
 PromotionsNotAnyMoreButton=Never show this again
