@@ -5,8 +5,9 @@ deducedLang.guess=Deducido %S
 settingListenersError=Error interno (Inicializaci\u00f3n de observadores)
 errorSettingSpellLanguage=Error: No se pudo poner el diccionario %S. \u00bfQuiz\u00e1 se ha desinstalado?
 DiscardedUpdateTooMuchRecipients=Se descarta guardar idioma. Demasiados destinatarios. (M\u00e1ximos destinatarios son %S)
-WeAreCollectingData=AutomaticDictionarySwitcher recoge datos an\u00f3nimos de su uso para mejorar futuras versiones. Puedes deshabilitarlo editando las preferencias de la extensi\u00f3n.
+WeAreCollectingData=AutomaticDictionarySwitcher recoge datos an\u00f3nimos de su uso para mejorar futuras versiones.
 IMOKWithIt=Me parece bien!
+DontDoIt=No lo hagas
 MoreInfo=M\u00e1s informaci\u00f3n
 PromotionsNotNowButton=Ahora no
 PromotionsNotAnyMoreButton=No mostrar mas esto
